--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "railsbooster",
   "private": true,
   "dependencies": {
-    "@inertiajs/inertia": "^0.1.7",
-    "@inertiajs/inertia-vue": "^0.1.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
-    "tailwindcss": "^1.1.3",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10"
+    "tailwindcss": "^1.1.4"
   },
   "version": "0.1.0",
   "devDependencies": {
@@ -25,6 +20,6 @@
     "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
-    "start": "./bin/webpack-dev-server"
+    "dev": "./bin/webpack-dev-server"
   }
 }
