--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "railsbooster",
   "private": true,
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^4.0.7",
+    "@rails/webpacker": "4.2.2",
     "tailwindcss": "^1.1.4"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
     "dev": "./bin/webpack-dev-server"
