--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "railsbooster",
   "private": true,
   "dependencies": {
+    "@inertiajs/inertia": "^0.5.0",
+    "@inertiajs/inertia-vue": "^0.4.0",
+    "@inertiajs/progress": "^0.1.2",
     "@rails/actioncable": "^6.0.3-4",
     "@rails/activestorage": "^6.0.3-4",
-    "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "^5.2.1",
-    "tailwindcss": "^1.9.5"
+    "tailwindcss": "^1.9.5",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12"
   },
   "version": "0.1.0",
   "devDependencies": {
