Adds SMTP config for sending email in production

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
+# App
+APP_NAME=RailsBooster
+APP_URL=/
+
 # RAILS default port
 PORT=3000
 
-# SMTP Config
-SMTP_HOST=
+# SMTP config for sending email in production environment
+SMTP_ADDRESS=
 SMTP_DOMAIN=
 SMTP_USER=
 SMTP_PASSWORD=
