--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "@inertiajs/inertia": "^0.5.0",
     "@inertiajs/inertia-vue": "^0.4.0",
     "@inertiajs/progress": "^0.1.2",
-    "@rails/actioncable": "^6.0.3-4",
-    "@rails/activestorage": "^6.0.3-4",
+    "@rails/actioncable": "^6.1.0",
+    "@rails/activestorage": "^6.1.0",
     "@rails/webpacker": "^5.2.1",
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.1",
